# debiased-spatial-whittle

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.rst  mkdocs.yml  profile.stats  pyproject.toml
.github/workflows/: build_deploy_mkdocs.yaml  build_paper.yml  pypi.yml  run_tests_on_push.yaml
binder/: environment.yml
debiased_spatial_whittle/: __init__.py  cov_funcs.py  expected_periodogram.py  grids.py  likelihood.py  models.py  simulation.py
docs/: 2d_separable.py  3d_separable.py  3dexponential.py  analytic_derivatives.ipynb  anisotropic.py  backend.md  bayesian_coverages.py  chisquaredmodel.py  circle.py  circle_gpu.py  circle_non_parametric.py  contribute.md  debiased_whittle_vs_exact_gaussian.py  derivative_practice.py  dual_remote_sensing.py  estimates_variance_prediction.py  estimation.md  example.py  france.py  france_interpolation.py  france_vectorized.py  francebernoulli.py  fullgrid.py  gof.md  goodness_of_fit.py  grids.md  iidbernoulli.py  index.md  install.md  interpolation_example.py  least_squares.py  long_memory_st.py  matern.py  mcmc_coverages.py  models.md  multivariate_simple.py  multivariate_two_grids.py  non-gaussian-3d.py  non-isotropic.py  one-dimensional.py  (+16 more)
docs/Arthurs_code/: gpu_script.py  gpu_script_2.py  gpu_script_Toms.py  utils.py
docs/coverages/: bayesian_coverages.py  bayesian_coverages_hpc.py  bayesian_coverages_multiprocess.py  frequentist_coverages_mcmc.py  mles_example.py  process_txt.py  process_txt_2.py  submit_coverages.sh
docs/data/: Frederik53.mat
docs/javascripts/: mathjax.js
docs/notebooks/: circle.ipynb  cpu_vs_gpu.ipynb  multivariate_two_grids.ipynb
docs/sea surface temperature/: inference.py  latitude.txt  longitude.txt  sst_data.txt  sst_processing.py  sst_raw.txt
docs/venus data/: venus.py  venus_bayes.py
paper/: paper.bib  paper.md
src/debiased_spatial_whittle/: Likelihoods.py  __init__.py  backend.py  bayes.py  bayes_old.py  confidence.py  cov_funcs.py  diagnostics.py  grids.py  hypothesis_tests.py  interpolation.py  least_squares.py  likelihood.py  models.py  modelsv2.py  multivariate_periodogram.py  new_models.py  old_models.py  periodogram.py  plotting_funcs.py  samples.py  sdf_models.py  simulation.py  spatial_kernel.py  tsmodels.py  utils.py
src/debiased_spatial_whittle/bayes/: __init__.py  diagnostic_test.py  funcs.py  mcmc.py  (+5 more)
tests/: check_bayes.py  test_bayes.py  test_bayes_likelihood_base.py  test_bayes_likelihoods.py  test_confidence.py  test_debiasedwhittle.py  test_estimation.py  test_expected_periodogram.py  test_expected_periodogram_multivariate.py  test_grids.py  test_hypothesis_tests.py  test_likelihood.py  test_models.py  test_shapes.py  test_simulation.py
(+20 files in other folders)
