[tool.poetry]
name = "debiased-spatial-whittle"
version = "0.2"
description = ""
authors = ["arthur <ahw795@qmul.ac.uk>"]
include = ["france.jpg"]
homepage = "http://arthurpgb.pythonanywhere.com/sdw"
keywords = ["random fields", "statistics", "whittle", "spatial", "matern", "kriging", "interpolation"]

[tool.poetry.dependencies]
python = ">=3.8, <3.11"
numpy = "^1.21.5"
matplotlib = "^3.7.0"
scipy = "^1.7.3"
progressbar2 = "^4.2.0"
snakeviz = "^2.1.1"
autograd = "^1.5"
seaborn = "^0.12.2"
numdifftools = "^0.9.41"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"