[tool.poetry]
name = "debiased-spatial-whittle"
version = "2.1.2"
description = "Spatial Debiased Whittle likelihood for fast inference of spatio-temporal covariance models from gridded data"
readme = "README.md"
authors = ["arthur <ahw795@qmul.ac.uk>"]
include = ["france.jpg"]
homepage = "http://arthurpgb.pythonanywhere.com/sdw"
keywords = ["random fields", "statistics", "whittle", "spatial", "matern", "kriging", "interpolation"]

[tool.poetry.dependencies]
python = ">=3.9, <4.0"
numpy = "^1.21.5"
matplotlib = "^3.7.0"
scipy = "^1.7.3"
progressbar2 = "^4.2.0"
param = "^2.1.1"

autograd = "^1.5"
seaborn = "^0.12.2"

cupy-cuda12x = {version="^13.0.0", optional= true}
cupy-cuda11x = {version="*", optional= true}
torch = {version="2.2.2", optional=true}
pytest-cov = "^6.2.1"

[tool.poetry.extras]
gpu12 = ["cupy-cuda12x", "torch"]
gpu11 = ["cupy-cuda11x", "torch"]

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
ruff = "^0.8.2"
pre-commit = "^4.0.1"
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings-python = "*"
mkdocs-jupyter = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pdoc]
show_inherited_members = true
show_special_methods = true
